# cpp_python_integration

./: .gitignore
c/: .gitignore  CMakeLists.txt  README.md  main.py  setup.py  total.c
cpp/: .gitignore  CMakeLists.txt  README.md  SquareRoot.cpp  SquareRoot.hpp  SquareRoot_C_Adapter.cpp  SquareRoot_C_Adapter.h  c_square_root.c  c_square_root.h  main.c  main.py  sqrtlib.c  sqrtlib.cpp
cpp/cmake/Modules/: BuildBoost.cmake
cpp/debug/: main.c  main.py
cpp/python/: main.py
